# astc_preview

./: .gitignore  LICENSE  README.md
ASTCPreview/Assets/RawRes/Shaders/: ColorMask.shader
ASTCPreview/Assets/Scripts/Editor/: ASTCTool.cs  ASTCWrap.cs
ASTCPreview/ProjectSettings/: ProjectSettings.asset
astc-decode-wrap-forcs/wrap/: CMakeLists.txt  Test.cpp  Test.h  astc_func.h  build.bat  decode_wrap.cpp  decode_wrap.h
